# practical-work

./: CMakeLists.txt  README.md
Module-11/Task-1/: CMakeLists.txt
Module-11/Task-1/src/: caesar_cipher.cpp  caesar_cipher.hpp  main.cpp
Module-11/Task-2/: CMakeLists.txt
Module-11/Task-2/src/: email_address.cpp  email_address.hpp  main.cpp
Module-11/Task-3/: CMakeLists.txt
Module-11/Task-3/src/: ip_address.cpp  ip_address.hpp  main.cpp
Module-11/Task-4/: CMakeLists.txt
Module-11/Task-4/src/: main.cpp  tic_tac_toe_game.cpp  tic_tac_toe_game.hpp
Module-12/: CMakeLists.txt
Module-12/Task-1/src/: main.cpp
Module-12/Task-2/: CMakeLists.txt
Module-12/Task-2/src/: heap_sort.cpp  heap_sort.hpp  main.cpp
Module-12/Task-3/src/: main.cpp
Module-12/Task-4/src/: main.cpp
Module-13/Task-1/src/: main.cpp
Module-13/Task-2/: CMakeLists.txt
Module-13/Task-2/src/: main.cpp
Module-13/Task-3/src/: main.cpp
Module-14/Task-1/src/: main.cpp
Module-14/Task-2/: CMakeLists.txt
Module-14/Task-2/src/: main.cpp
Module-14/Task-3/src/: main.cpp
Module-14/Task-4/: CMakeLists.txt
Module-14/Task-5/: CMakeLists.txt
Module-14/Task-7/: CMakeLists.txt
Module-14/Task-8/: CMakeLists.txt
Module-15/Task-2/: CMakeLists.txt
Module-16/Task-1/: CMakeLists.txt
Module-16/Task-3/: CMakeLists.txt
Module-16/Task-4/: CMakeLists.txt
Module-16/Task-5/: CMakeLists.txt
Module-19/: CMakeLists.txt
Module-19/Task-4/: CMakeLists.txt
Module-19/Task-4/src/: main.cpp
Module-19/Task-5/: CMakeLists.txt
Module-20/Task-4/: CMakeLists.txt
cmake/: utils.cmake
(+84 files in other folders)
